# travel-crm

./: .env.example  .gitignore  Crm Travel.txt  DEPLOYMENT_GUIDE.md  Dockerfile  Procfile  QUICK_DEPLOY.md  QUICK_START.md  RAILWAY_DEPLOY.md  RAILWAY_READY.md  README_NEW.md  WEB_INTERFACE_COMPLETE.md  alembic.ini  asgi.py  check_db.py  check_server.py  check_users_db.py  comprehensive_test.py  create_admin.py  create_admin_railway.py  docker-compose.yml  init.sql  init_db.sql  pyproject.toml  pytest.ini  pythonanywhere_init.py  railway.json  render.yaml  requirements.txt  test.db  test_e2e.py  test_permissions.py  travel_crm.db
alembic/: env.py
alembic/versions/: 1594d7fe2ca9_create_users_table.py  init_empty.py
api/: index.py
docker/: entrypoint.sh
src/: database.py  main.py  settings.py  settings_simple.py
src/auth/: __init__.py  core.py  permissions.py
src/models/: __init__.py  business.py  token.py  user.py
src/routers/: auth.py  web.py
src/schemas/: __init__.py  user.py
static/: style.css
templates/: base.html  dashboard.html  error.html  login.html  register.html
tests/: conftest.py  test_auth.py  test_models.py  test_web.py
